<resources>
    <string name="app_name">ThingStat</string>
    <string name="title_activity_main">ThingStat</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_scanqr">Scan QR</string>
    <string name="action_logout">Log Out</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_facebook">Sign in with Facebook</string>
    <string name="action_sign_in_twitter">Sign in with Twitter</string>
    <string name="action_register">Sign up</string>
    <string name="hint_password_verify">Repeat password</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_username">Enter your username</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_mismatch_password">Passwords do not match</string>
    <string name="error_incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="rememberMe">Remember me</string>

</resources>
